--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Hello Coursera!</title>
 </head>
+<style >
+body {
+	font-family: "Comic Sans MS","Comic Sans", cursive;
+}
+h1{
+	text-align: center;
+}
+h2{
+	text-align: right;
+	font-size: 80%;
+	font-weight: 100px; 
+	display: inline-block;
+	border: 2px solid black;
+	<!--padding: 3px;--!> 
+	width: 30px;
+	
+}
+#box1 {
+	background-color: gray ;
+	border: 2px solid black;
+	padding: 3px;
+}
+p{
+	font-size: 70%;
+}
+</style>
 <body>
-<h1>Hello Coursera!It's a great course!</h1>
+<h1>Our Menu</h1>
+<div id="box1"> 
+	<h2 style="background-color: pink;">Chicken</h2>
+	<p> lorem ipsum dolor sit omet, consectetur adipisicing elit, set do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad mini veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> </div>
 </body>
 </html>
